[IMPL] Add implementation from Nikolai Kaligin (1 year ago)
It is about clusters of points and facets and so on...

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,3 +1,7 @@
+set(SOURCES_buildCluster buildCluster.cpp)
+add_executable(buildCluster ${SOURCES_buildCluster})
+target_link_libraries(buildCluster polyhedronCorrection)
+
 set(SOURCES_globalCorrection globalCorrection.cpp)
 add_executable(globalCorrection ${SOURCES_globalCorrection})
 target_link_libraries(globalCorrection polyhedronCorrection)
