[REFACTOR] mv deform_w to class PointShifterWeighted

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ Source/Correctors/GlobalShadeCorrector/GlobalShadeCorrector.cpp
 Source/Correctors/Intersector/FacetIntersector.cpp
 Source/Correctors/Intersector/Intersector.cpp
 Source/Correctors/PointShifter/PointShifter.cpp
+Source/Correctors/PointShifterWeighted/PointShifterWeighted.cpp
 Source/Polyhedron/Polyhedron_deform.cpp
 Source/Polyhedron/Polyhedron_intertia.cpp
 Source/Polyhedron/Polyhedron.cpp
