[ORG] Create ini config for debugging the library

--- a/config/debug_exceptions.conf.ini
+++ b/config/debug_exceptions.conf.ini
@@ -7,7 +7,8 @@
 * 
 *  Add your additional files to be debugged here. Please, type full path from 
 *  "./" directory
+*  
+*  Copy this file to the file with the same name without ".ini" suffix
 */
 
 ./Source/Polyhedron/Polyhedron.cpp
-
