[IMPL] Add make target "distclean"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,30 @@ endif ()
 
 add_subdirectory(Tests)
 
+# add custom target distclean
+# cleans and removes cmake generated files etc.
+# Jan Woetzel 04/2003
+#
+
+if (UNIX)
+  add_custom_target (distclean @echo cleaning for source distribution)
+  set(DISTCLEANED
+   cmake.depends
+   cmake.check_depends
+   CMakeCache.txt
+   cmake.check_cache
+   *.cmake
+   Makefile
+   core core.*
+   gmon.out
+   *~
+  )
+  
+  add_custom_command (
+    DEPENDS clean
+    COMMENT "distribution clean"
+    COMMAND rm
+    ARGS    -Rf CMakeTmp ${DISTCLEANED}
+    TARGET  distclean
+  )
+endif (UNIX)
