[DOC] thesis: Add image directory and 1st image

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/CMakeLists.txt
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 include(UseLATEX)
 
 ADD_LATEX_DOCUMENT(i.palachev_ReportAboutReconstruction.tex
+    IMAGE_DIRS images
     BIBFILES references.bib
     DEFAULT_PDF
 )
