--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/CMakeLists.txt
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/CMakeLists.txt
@@ -6,4 +6,5 @@ ADD_LATEX_DOCUMENT(i.palachev_ReportAboutReconstruction.tex
     IMAGE_DIRS images
     BIBFILES references.bib
     DEFAULT_PDF
+    MANGLE_TARGET_NAMES
 )
