--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,6 @@ file(GLOB_RECURSE SOURCE_pcl                  "./Source/*.cpp")
 
 file(GLOB_RECURSE SOURCE_tests                "./Tests/*.cpp")
 
-file(GLOB_RECURSE HEADERS_arrayOperations     "./External/ArrayOperations/*.h")
-file(GLOB_RECURSE HEADERS_gaussString         "./External/GaussString/*.h")
-file(GLOB_RECURSE HEADERS_lsm                 "./External/LSM/*.h")
-file(GLOB_RECURSE HEADERS_Vector3d            "./External/Vector3d/*.h")
-file(GLOB_RECURSE HEADERS_pcl                 "./Source/*.h")
-
 set (HEADERS_all "")
 list (APPEND HEADERS_all ${HEADERS_arrayOperations})
 list (APPEND HEADERS_all ${HEADERS_gaussString})
@@ -35,6 +29,11 @@ foreach (_headerFile ${HEADERS_all})
 endforeach()
 list(REMOVE_DUPLICATES INCLUDE_DIRS_all)
 
+list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/Source")
+list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/External/ArrayOperations")
+list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/External/GaussString")
+list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/External/LSM")
+list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/External/Vector3d")
 list (APPEND INCLUDE_DIRS_all "/usr/include/libgexf")
 list (APPEND INCLUDE_DIRS_all "/usr/include/libxml2")
 list (APPEND INCLUDE_DIRS_all "/usr/include/eigen3")
